<resources>
    <string name="app_name">Age Gender Expression Detector</string>
    <string name="start_capture">Start Capture</string>
    <string name="take_photo">Take Photo</string>
    <string name="select_image">Select Image</string>
    <string name="run_inference">Run Inference</string>
    <string name="results_will_appear_here">Results will appear here</string>
    <string name="todo">TODO</string>
    <string name="test_a_default_image">Test a Default Image</string>
</resources>